# ResearchMind

./: .env.example  Makefile  PROJECT_FILES.md  README.md  main_mcp.py  pyproject.toml  requirements.txt  setup.py  test_agents.py
agents/: __init__.py  agent_manager.py  coordinator_agent.py  database_agent.py  experiment_agent.py  literature_agent.py  simulation_agent.py  workflow_agent.py
config/: agent_config.yaml  mcp_config.yaml
docs/: README.md
docs/en/: README.md  agent-config.md  get-started.md  installation.md  mcp-integration.md  quickstart.md
docs/en/samples/: battery-materials.md
docs/zh/: README.md  agent-config.md  get-started.md  installation.md  mcp-integration.md  quickstart.md
docs/zh/samples/: battery-materials.md
examples/: __init__.py  agent_demo.py
mcp_servers/experiment/: __init__.py  requirements.txt  server.py
mcp_servers/experiment/tools/: __init__.py  design_optimizer.py  protocol_generator.py  risk_assessment.py
mcp_servers/literature/: server.py
mcp_servers/literature/tools/: arxiv_search.py  paper_analysis.py  scholar_search.py  web_search.py
mcp_servers/materials/: __init__.py  requirements.txt  server.py
mcp_servers/materials/tools/: __init__.py  crystallm_wrapper.py  materials_project.py  structure_analysis.py
mcp_servers/simulation/: __init__.py  requirements.txt  server.py
mcp_servers/simulation/tools/: __init__.py  calculation_setup.py  mattersim_wrapper.py  result_analysis.py
scripts/: start_development.sh  verify_installation.py
